# mstlo

./: Cargo.toml  README.md
.github/workflows/: build-wheels.yml  deploy-docs.yml  publish-crate.yml  publish-macros.yml  python-tests.yml  release-wheels-pypi.yml  release-wheels-testpypi.yml  rust.yml
experiments/: README.md  bench_all.sh  python_benchmark.py  requirements.txt  rtamt_benchmark.py  rtamt_cpponline_benchmark.py
experiments/data_analysis/: mann_whitney.py  performance_comparison.py  regression_analysis.py  rtamt_performance_plot.py
experiments/paper_results/outputs/: cache_size_results_M=1.csv  performance_results_M=50.csv  python_performance_results_M=50.csv  regression_fit_results.csv  rtamt_benchmark_results.csv
experiments/paper_results/outputs/data_analysis/: mstlopython_vs_rtamt_mwu_1_to_4.csv  native_vs_python_mwu.csv  native_vs_rtamt_mwu_1_to_4.csv  regression_fit_results.csv
experiments/paper_results/outputs/mstlo/: cache_size_results_M=1.csv  performance_results_M=50.csv  performance_results_M=50_raw.csv  python_performance_results_M=50.csv  python_performance_results_M=50_raw.csv
mstlo/: Cargo.toml
mstlo-python/: Cargo.toml  README.md  mkdocs.yml  pyproject.toml
mstlo-python/docs/: index.md  reference.md
mstlo-python/examples/: batch_update.py  semantics-comparison.ipynb  simple-example.py  variables_example.py
mstlo-python/python/festl_python/: festl_python.pyi
mstlo-python/python/mstlo_python/: __init__.py  mstlo_python.pyi
mstlo-python/src/: lib.rs
mstlo-python/tests/: __init__.py  test_mstlo_python.py
mstlo/benches/: monitor_benchmark.rs  paper_benchmark.rs
mstlo/benches/results/: paper_native_benchmark_results_N=20000_raw.csv
mstlo/examples/: intro_example.rs  simple_example.rs  variables_example.rs
mstlo/mstlo-macros/: Cargo.toml
mstlo/mstlo-macros/src/: lib.rs
mstlo/src/: core.rs  formula_definition.rs  formulas.rs  lib.rs  monitor.rs  naive_operators.rs  parser.rs  ring_buffer.rs  synchronizer.rs
mstlo/src/operators/: atomic_operators.rs  binary_operators.rs  not_operator.rs  unary_temporal_operators.rs  until_operator.rs
mstlo/src/stl/: core.rs  parser.rs
mstlo/tests/: macros_test.rs  monitor_build_fail_test.rs  monitor_rosi_test.rs  monitor_signal_sync_test.rs  monitor_test.rs  parser_parity_test.rs
mstlo/tests/common/: mod.rs
mstlo/tests/fixtures/: formulas.rs  oracles.rs  signals.rs
(+5 files in other folders)
