[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[project]
name = "mstlo-python"
description = "Python bindings for the mstlo online Signal Temporal Logic (STL) monitoring library."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Andreas Kaag Thomsen", email = "akt@ece.au.dk" },
           { name = "Niels Viggo Stark Madsen", email = "nielsviggostark@gmail.com" }]
license = { text = "INTO-CPS Association Public License v1.0" }
license-files = ["LICENSE", "ICA-USAGE-MODE.txt"]
requires-python = ">=3.8"
keywords = ["signal temporal logic", "stl", "monitoring", "runtime verification", "online monitoring", "temporal logic"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/INTO-CPS-Association/mstlo"
Documentation = "https://INTO-CPS-Association.github.io/mstlo/"
Repository = "https://github.com/INTO-CPS-Association/mstlo"

[tool.maturin]
# Python source directory for additional files (like .pyi)
python-source = "python"

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings-python>=0.24",
]